--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "imperialpaws",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "ejs": "^3.1.10",
-    "express": "^5.2.1",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
+    "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.18.2",
-    "multer": "^2.0.2"
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
